fixed question alignment

--- a/crowdsourcing/light_gameplay/webapp/light_gameplay_task/src/Views/OnboardingView/styles.css
+++ b/crowdsourcing/light_gameplay/webapp/light_gameplay_task/src/Views/OnboardingView/styles.css
@@ -18,6 +18,5 @@
     border-radius: 10px;
     width: 80%;
     border-width: 10px;
-    padding-right: 10%;
     background-color: lightgrey;
 }
