--- a/crowdsourcing/light_gameplay/webapp/light_gameplay_task/src/components/Forms/RadioForm/styles.css
+++ b/crowdsourcing/light_gameplay/webapp/light_gameplay_task/src/components/Forms/RadioForm/styles.css
@@ -2,26 +2,22 @@
 .radioform-container{
     display: flex;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
     flex-direction: column;
-
+    width: 100%;
 }
 .question-container{
     display: flex;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
     flex-direction: column;
     width:100%
-}
-
-.question-img {
-    width:80%;
 }
 
 .answers-container{
     display: flex;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
     flex-direction: column;
     width:100%
 }
@@ -31,8 +27,4 @@
     justify-content: flex-end;
     align-items: center;
     width:100%
-}
-
-.answer-img {
-    width:80%;
 }
